# fishies

./: CMakeLists.txt  README.md  config.ini  imgui.ini  todo.md
docs/: initial_pl.typ
src/: boids.cu  boids_gpu.cu  main.cu  params.cu  shaders.cu  ui.cu
